# src/controllers/pacienteController.js
@@ -5,56 +5,87 @@ const  bcrypt = require("bcrypt");
 
 
 const findAllPacientes = async (req, res) => {
-  const authHeader = req.get (`authorization`);
+  const authHeader = req.get (`Authorization`);
   const token = authHeader.split(' ')[1];
   if(!token){
-    return res.status(401).send("Você precisa de uma autorização para acessar a lista de pacientes.");
+    return res.status(400).send("Você precisa de uma autorização para acessar a lista de pacientes.");
   }
   const err = jwt.verify(token,SECRET,function(error){
     if(error) return error 
   })  
-  if (err) return res.status(401).send("Não autorizado.")
+  if (err) return res.status(400).send("Não autorizado.")
     console.log(req.url);
     pacientes.find(function (err, pacientes){
       res.status(200).send(pacientes);
   });
 };
 
-const postPaciente = (req, res) => {
+const postPaciente = async (req, res) => {
+  pacientes.findOne({nome_crianca: req.body.nome_crianca}, async function(error, paciente) {
+    if(paciente) {
+      return res.status(409).send(`O nome ${req.body.nome_crianca} já consta em nossa banco de dados.`);
+    }
+    pacientes.findOne({responsaveis: req.body.responsaveis }, async function(error, paciente) {
+    if(paciente) {
+      return res.status(409).send(`Os responséveis: ${req.body.responsaveis} já constam em nosso banco de dados.`);
+    }
     const senhaComHash = bcrypt.hashSync(req.body.senha, 10);
     req.body.senha = senhaComHash;  
-    console.log(req.body);
-    const paciente = new pacientes(req.body);
-  
-    paciente.save(function (err) {
-      if (err) {
-        return res.status(500)
-      }
-      res.status(201).send(paciente.toJSON());
-    });
-  };
+    try {
+      const {
+          nome_crianca,
+          senha,
+          idade,
+          funcao,
+          responsaveis,
+          restricoes,
+          alergias,
+          data_entrada,
+      } = req.body;  
+      
+      const newPaciente = new pacientes({
+        nome_crianca,
+        senha,
+        idade,
+        funcao,
+        responsaveis,
+        restricoes,
+        alergias,
+        data_entrada,
+      }); 
+               
+    const savedPaciente = await newPaciente.save();
+      res.status(201).json({message: "Paciente incluído(a) com sucesso!", savedPaciente});
+      }catch (error){        
+      console.log(error);
+      res.status(500).json({ message: error.message});
+    };
+  });
+ });
+};
 
-const login = (req,res) => {
-    pacientes.findOne({nome_crianca: req.body.nome_crianca }, function(error, paciente) {
+  const login = async (req,res) => {
+    pacientes.findOne({ nome_crianca: req.body.nome_crianca }, async function(error, paciente) {
       if(!paciente) {
-        return res.status(404).send(`Não localizamos o paciente com nome ${req.body.nome_crianca}`);
-      }
-  
-      const senhaValida = bcrypt.compareSync(req.body.senha, paciente.senha);
-  
-      if(!senhaValida) {
-        return res.status(403).send(`Esta senha está incorreta.`)
-      }  
-      const token = jwt.sign({nome_crianca: req.body.nome_crianca }, SECRET);
-        return res.status(200).send(token)
-    })
-  }  
+          return res.status(401).send(`Não localizamos o nome ${req.body.nome_crianca}`);
+        }  
+        const senhaValida = await bcrypt.compareSync(req.body.senha, paciente.senha);  
+        if(!senhaValida) {
+          return res.status(401).send(`A  senha informada está incorreta.`)
+        }  
+        const token = jwt.sign({nome_crianca: req.body.nome_crianca}, SECRET);
+          return res.status(200).send(token)
+      })
+    }  
  
 const findPacienteNome = async (req, res) => { 
-    try {                       
-        const filtroNome = await pacientes.find({nome:req.query.nome_crianca});
-        res.status(200).json(filtroNome);
-        }catch(error){
+  try {                       
+    const filtroNome = await pacientes.findOne({nome_crianca:req.query.nome_crianca});
+      if(!filtroNome){
+        return res.status(400).json({message:`O nome ${req.query.nome_crianca} não foi encontrado em nosso banco de dados.`});
+      };      
+    res.status(200).json(filtroNome);
+    }catch(error){
         console.log(error);
         res.status(500).json({message: error.message})
     };
@@ -62,7 +93,7 @@ const findPacienteNome = async (req, res) => {
 
 const findPacienteById = async (req, res) => {
     try {
-        const findPacId = await pessoais.findById(req.params.id);
+        const findPacId = await pacientes.findById(req.params.id);
         if(!findPacId ){
            res.status(404).json({message:'Id não encontrado.'});
            return
@@ -71,34 +102,6 @@ const findPacienteById = async (req, res) => {
     }catch (error) {
         console.log(error);
         res.status(500).json({message: error.message})
-    };
-};
-
-const addNovoPaciente = async (req, res) => {
-    try {
-        const{
-            nome_crianca,
-            senha,
-            idade,
-            responsaveis,
-            restricoes,
-            alergias,
-            data_entrada,
-        } = req.body;
-        const newPaciente = new pacientes({
-            nome_crianca,
-            senha,
-            idade,
-            responsaveis,
-            restricoes,
-            alergias,
-            data_entrada,
-        });
-        const savedPaciente = await newPaciente.save();
-        res.status(200).json({ message: "Novo colaborador inserido com sucesso.", savedPaciente});
-    }catch (error) {
-        console.log(error);
-        res.status(500).json(error.message);
     };
 };
 
@@ -133,7 +136,7 @@ const deleteDadosPaciente = async (req, res) => {
     try {
         const{id} = req.params;
         const deleteDadosPaciente = await pacientes.findOneAndDelete(id);
-        const message = `Profissional com nome ${deleteDadosPaciente.nome} teve seus dados deletados.` ;
+        const message = `Profissional com nome ${deleteDadosPaciente.nome_crianca} teve seus dados deletados.` ;
         res.status(200).json({message});
     }catch(error){
         console.log(error);
@@ -145,7 +148,6 @@ const deleteDadosPaciente = async (req, res) => {
 module.exports = {
     findAllPacientes,
     postPaciente,
-    addNovoPaciente,
     login,
     findPacienteNome,
     findPacienteById,
