# src/controllers/profController.js
@@ -15,112 +15,125 @@ const findAllProfissionais = async (req, res) => {
     if(error) return error 
   })  
   if (err) return res.status(401).send("não autorizado")
-    console.log(req.url);
+    //console.log(req.url);
     profissionais.find(function (err, profissionais) {
       res.status(200).send(profissionais);
   });
 };
 
-const postProfissional = (req, res) => {
+const postProfissional = async (req, res) => {
+   profissionais.findOne({ nome: req.body.nome }, async function(error, profissional) {
+    if(profissional) {
+      return res.status(409).send(`O nome ${req.body.nome} já consta em nossa banco de dados.`);
+    }
+    profissionais.findOne({ email: req.body.email }, async function(error, profissional) {
+    if(profissional) {
+      return res.status(409).send(`O email ${req.body.email} já consta em nossa banco de dados.`);
+    }
     const senhaComHash = bcrypt.hashSync(req.body.senha, 10);
     req.body.senha = senhaComHash;  
-    console.log(req.body);
-    const profissional = new profissionais(req.body);
-  
-    profissional.save(function (err) {
-      if (err) {
-        return res.status(500)
-      }
-      res.status(201).send(profissional.toJSON());
-    });
-  };
-
-const login = (req,res) => {
-    profissionais.findOne({ email: req.body.email }, function(error, profissional) {
-      if(!profissional) {
-        return res.status(404).send(`Não localizamos o email ${req.body.email}`);
-      }
-  
-      const senhaValida = bcrypt.compareSync(req.body.senha, profissional.senha);
-  
-      if(!senhaValida) {
-        return res.status(403).send(`Esta senha está incorreta.`)
-      }
-  
-      const token = jwt.sign({ email: req.body.email }, SECRET);
-        return res.status(200).send(token)
-    })
-  }  
-
-const findFuncao = async (req, res) => {   
-    try {                       
-        const filtroFuncao = await profissionais.find({funcao:req.query.funcao});
-        if(!filtroFuncao){
-            res.status(404).json({message:'Profissional não encontrado.'});
-            return 
-        }
-        res.status(200).json(filtroFuncao);
-        }catch(error){
-        console.log(error);
-        res.status(500).json({message: error.message})
+    try {
+      const {
+          nome,
+          email,
+          senha,
+          funcao,
+          horario_atendimento,
+          data_entrada,
+      } = req.body;  
+      
+      const newProfissional = new profissionais({
+          nome,
+          email,
+          senha,
+          funcao,
+          horario_atendimento,
+          data_entrada,
+      }); 
+               
+    const savedProfissional = await newProfissional.save();
+      res.status(201).json({message: "Profissional incluído com sucesso!", savedProfissional });
+      }catch (error){        
+      console.log(error);
+      res.status(500).json({ message: error.message});
     };
+  });
+ });
+};
+         
+
+const login = async (req,res) => {
+    profissionais.findOne({ email: req.body.email }, async function(error, profissional) {
+      if(!profissional) {
+          return res.status(401).send(`Não localizamos o email ${req.body.email}`);
+        }  
+        const senhaValida = await bcrypt.compareSync(req.body.senha, profissional.senha);  
+        if(!senhaValida) {
+          return res.status(401).send(`Esta senha está incorreta.`)
+        }  
+        const token = jwt.sign({ email: req.body.email }, SECRET);
+          return res.status(200).send(token)
+      })
+    }  
+
+  const findFuncao = async (req, res) => {
+    try {                       
+      const filtroFuncao = await profissionais.find({funcao:req.query.funcao});
+        if(!filtroFuncao){
+          return res.status(400).json({message:`O nome ${req.query.funcao} não consta em nosso banco de dados.`});
+        };
+      res.status(200).json(filtroFuncao);
+      }catch(error){
+          console.log(error);
+          res.status(500).json({message: error.message})
+      };
   };  
   
+    
 const findProfissionalNome = async (req, res) => { 
     try {                       
-        const filtroNome = await profissionais.find({nome:req.query.nome});
-        res.status(200).json(filtroNome);
-        }catch(error){
+    const filtroNome = await profissionais.findOne({nome:req.query.nome});
+      if(!filtroNome){
+        return res.status(400).json({message:`O nome ' ${req.query.nome} ' não foi encontrado em nosso banco de dados.`});
+        };             
+    res.status(200).json(filtroNome);
+    } catch(error){
         console.log(error);
         res.status(500).json({message: error.message})
     };
   };  
 
-const findProfById = async (req, res) => {
+  const findProfById = async (req, res) => {
     try {
-        const findProfId = await profissionais.findById(req.params.id);
-        if(!findProfId){
-           res.status(404).json({message:'Id não encontrado.'});
-           return
-        }        
-        res.status(200).json(findProfId);
-    }catch (error) {
-        console.log(error);
-        res.status(500).json({message: error.message})
-    };
-};
+      const {id} = req.params
+      const findProfissional = await profissionais.findById(id);
+        if (findProfissional == null) {
+          return res.status(404).send({ message:`É necessário informar o ID.`})
+        }            
+      res.status(200).json(findProfissional);
+        }catch (error) {
+        res.status(500).json({ message: error.message })
+      }
+    }
+     
 
-const addNewProfissional = async (req, res) => {
-    try {
-        const{
-          nome,
-          email,
-          senha,
-          funcao,
-          data_entrada,
-        } = req.body;
-        const newProfissional = new profModel({
-          nome,
-          email,
-          senha,
-          funcao,
-          data_entrada,
-        });
-        const savedProfissional = await newProfissional.save();
-        res.status(200).json({ message: "Novo colaborador inserido com sucesso.", savedProfissional});
-    }catch (error) {
-        console.log(error);
-        res.status(500).json(error.message);
-    };
-};
-
+//criação de rota para atualizar cadastro de profissionais
 const updateCadProfissional = async (req, res) => {
-    try {
+  profissionais.find({ email: req.body.email }, async function(error, profissional) {
+    if(!profissional) {
+        return res.status(401).send(`Não localizamos o email ${req.body.email}`);
+      } 
+    profissionais.findOne({ senha: req.body.senha }, async function(error, senha) {
+    if(!senha) {
+        return res.status(401).send(`Senha não confere.`);
+      }  
+      try {
         const {
             nome,
             email,
             senha,
             funcao,
+            horario_atendimento,
             data_entrada,
         } = req.body;
         const updateCadProfissional = await profissionais.findByIdAndUpdate(req.params.id, {
@@ -128,32 +141,34 @@ const updateCadProfissional = async (req, res) => {
             email,
             senha,
             funcao,
+            horario_atendimento,
             data_entrada,
         });
-        res.status(200).json({ message: "Cadastro alterado com sucesso.", updateCadProfissional});
-    }catch(error){
+        const savedCadProfissional = await updateCadProfissional.save();
+        return res.status(201).json({ message: "Cadastro alterado com sucesso.", savedCadProfissional});
+        }catch(error){
         console.log(error);
         res.status(500).json({message: error.message});
-    };
-};
+      };
+    });
+   });
+  };
+  
 
 const deleteDadosProfissional = async (req, res) => {
     try {
         const{id} = req.params;
-        const deleteDadosProfissional = await profissionais.findOneAndDelete(id);
-        const message = `Profissional com nome ${deleteDadosProfissional.nome} teve seus dados deletados.` ;
-        res.status(200).json({message});
-    }catch(error){
+        const dadosProfissionalDeletado = await profissionais.findOneAndDelete(id);
+        return res.status(200).json({ message: `Cadastro deletado com sucesso.`, dadosProfissionalDeletado});
+        }catch(error){
         console.log(error);
         res.status(500).json({message: error.message});
-
-    };
+      };
 };
 
 module.exports = {
     findAllProfissionais,
     postProfissional,
-    addNewProfissional,
     login,
     findFuncao,
     findProfissionalNome,
