# src/routes/pacienteRoute.js
@@ -1,6 +1,6 @@
 const controller = require ("../controllers/pacienteController"); 
 
-const express = require ("express"); 
+const express = require("express"); 
 
 const router = express.Router();
 
@@ -10,7 +10,6 @@ router.get("/login", controller.login)
 router.post ("/add", controller.postPaciente);
 router.get("/nome", controller.findPacienteNome);
 router.get("/:id", controller.findPacienteById);
-router.post("/:id", controller.addNovoPaciente);
 router.put("/:id", controller.updateCadPaciente);
 router.delete("/delete/:id", controller.deleteDadosPaciente);
 
