# swagger/swagger_output.json
@@ -33,11 +33,8 @@
           "200": {
             "description": "OK"
           },
-          "403": {
-            "description": "Forbidden"
-          },
-          "404": {
-            "description": "Not Found"
+          "401": {
+            "description": "Unauthorized"
           }
         }
       }
@@ -52,7 +49,22 @@
             "schema": {
               "type": "object",
               "properties": {
+                "nome": {
+                  "example": "any"
+                },
+                "email": {
+                  "example": "any"
+                },
                 "senha": {
+                  "example": "any"
+                },
+                "funcao": {
+                  "example": "any"
+                },
+                "horario_atendimento": {
+                  "example": "any"
+                },
+                "data_entrada": {
                   "example": "any"
                 }
               }
@@ -62,6 +74,9 @@
         "responses": {
           "201": {
             "description": "Created"
+          },
+          "409": {
+            "description": "Conflict"
           },
           "500": {
             "description": "Internal Server Error"
@@ -83,8 +98,8 @@
           "200": {
             "description": "OK"
           },
-          "404": {
-            "description": "Not Found"
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -105,6 +120,9 @@
         "responses": {
           "200": {
             "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
           },
           "500": {
             "description": "Internal Server Error"
@@ -150,16 +168,19 @@
             "schema": {
               "type": "object",
               "properties": {
-                "nome": {
-                  "example": "any"
-                },
                 "email": {
                   "example": "any"
                 },
                 "senha": {
                   "example": "any"
                 },
+                "nome": {
+                  "example": "any"
+                },
                 "funcao": {
+                  "example": "any"
+                },
+                "horario_atendimento": {
                   "example": "any"
                 },
                 "data_entrada": {
@@ -170,8 +191,11 @@
           }
         ],
         "responses": {
-          "200": {
-            "description": "OK"
+          "201": {
+            "description": "Created"
+          },
+          "401": {
+            "description": "Unauthorized"
           },
           "500": {
             "description": "Internal Server Error"
@@ -278,12 +302,6 @@
                 "profissionalId": {
                   "example": "any"
                 },
-                "nome_crianca": {
-                  "example": "any"
-                },
-                "responsavel": {
-                  "example": "any"
-                },
                 "finalidade_atendimento": {
                   "example": "any"
                 },
@@ -332,10 +350,7 @@
                 "profissionalId": {
                   "example": "any"
                 },
-                "nome_crianca": {
-                  "example": "any"
-                },
-                "responsavel": {
+                "pacienteId": {
                   "example": "any"
                 },
                 "finalidade_atendimento": {
@@ -393,6 +408,202 @@
           },
           "404": {
             "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/clinica/paciente/all": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          }
+        }
+      }
+    },
+    "/clinica/paciente/login": {
+      "get": {
+        "description": "",
+        "parameters": [],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "401": {
+            "description": "Unauthorized"
+          }
+        }
+      }
+    },
+    "/clinica/paciente/add": {
+      "post": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome_crianca": {
+                  "example": "any"
+                },
+                "responsaveis": {
+                  "example": "any"
+                },
+                "senha": {
+                  "example": "any"
+                },
+                "idade": {
+                  "example": "any"
+                },
+                "funcao": {
+                  "example": "any"
+                },
+                "restricoes": {
+                  "example": "any"
+                },
+                "alergias": {
+                  "example": "any"
+                },
+                "data_entrada": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "201": {
+            "description": "Created"
+          },
+          "409": {
+            "description": "Conflict"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/clinica/paciente/nome": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "nome_crianca",
+            "in": "query",
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "400": {
+            "description": "Bad Request"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/clinica/paciente/{id}": {
+      "get": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "404": {
+            "description": "Not Found"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      },
+      "put": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          },
+          {
+            "name": "body",
+            "in": "body",
+            "schema": {
+              "type": "object",
+              "properties": {
+                "nome_crianca": {
+                  "example": "any"
+                },
+                "senha": {
+                  "example": "any"
+                },
+                "idade": {
+                  "example": "any"
+                },
+                "responsaveis": {
+                  "example": "any"
+                },
+                "restricoes": {
+                  "example": "any"
+                },
+                "alergias": {
+                  "example": "any"
+                },
+                "data_entrada": {
+                  "example": "any"
+                }
+              }
+            }
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
+          },
+          "500": {
+            "description": "Internal Server Error"
+          }
+        }
+      }
+    },
+    "/clinica/paciente/delete/{id}": {
+      "delete": {
+        "description": "",
+        "parameters": [
+          {
+            "name": "id",
+            "in": "path",
+            "required": true,
+            "type": "string"
+          }
+        ],
+        "responses": {
+          "200": {
+            "description": "OK"
           },
           "500": {
             "description": "Internal Server Error"
